--- a/default.css
+++ b/default.css
@@ -1,19 +1,34 @@
 body {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* Defines two columns of equal width */
     grid-template-rows: 1fr 1fr;
-    /* Defines two rows of equal height */
     height: 100vh;
-    /* Full height of the viewport */
     margin: 0;
 }
 
 svg {
     width: 100%;
-    /* Full width of the grid cell */
     height: 100%;
-    /* Full height of the grid cell */
+}
+
+#intro-container {
+    margin: 70px;
+    font-family: 'Arial', sans-serif;
+    padding: 20px;
+    background-color: #f0f0f0;
+    color: #333;
+    font-size: 20px;
+    overflow-y: auto;
+    width: 80%;
+    height: 60%;
+}
+
+ul {
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 10px;
 }
 
 .stock_quote {
